--- a/Pages/Shared/_NavicatLayout.cshtml
+++ b/Pages/Shared/_NavicatLayout.cshtml
@@ -9,15 +9,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RubyMine for Navicat</title>
-    <link href="~/lib/bootstrap-5.0.2-dist/css/bootstrap.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    @*<script src="https://kit.fontawesome.com/64adc7381d.js" crossorigin="anonymous"></script>*@
+    @*
+        <link href="~/lib/bootstrap-5.0.2-dist/css/bootstrap.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/64adc7381d.js" crossorigin="anonymous"></script>
+    *@
+    @*<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">*@
+
+    <link href="~/lib/bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" />
+    <script src="~/lib/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/bootstrap-icons/1.6.0/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="/css/wave.css">
 
-    <script src="~/lib/jquery-3.6.0/dist/jquery.js"></script>    
+    <script src="~/lib/jquery-3.6.0/dist/jquery.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <link rel="stylesheet" href="~/css/site.css" />
@@ -61,25 +67,25 @@
                         <span class="float-none fw-normal mr-1">
                             <a class="btn-sm text-dark border-828790 bg-white text-decoration-none fw-bold ps-1 pr-1" style="padding:2px;" href="/Logout"><img src="/images/xp/vcard.png" class="mb-1" />&nbsp;@User.Identity.Name</a>
                         </span>
-                        <a href="/Platform/" class="text-decoration-none fw-normal mr-4 text-dark fw-bold" title="返回开发平台主页"><img class="w-auto mb-1" src="/images/xp/shield.png" /><span class="fw-bold mt-1">3.0产品开发管理平台</span></a>
-                    </div>
-                    <div class="col">
-                        <div class="btn-group float-end">
-                            <button type="button" class="btn btn-danger dropdown-toggle p-1 shadow" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-diagram-3"></i>
-                            </button>
-                            <ul id="ul_show_level" class="dropdown-menu p-0 rounded-3 shadow">
-                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="1" href="#">展开到第1级</a></li>
+                        <div class="btn-group">
+@*<button type="button" class="btn btn-danger dropdown-toggle p-1 shadow" data-bs-toggle="dropdown" aria-expanded="false">
+<i class="bi bi-diagram-3"></i>
+</button>*@
+                            <a href="/Platform/" class="text-decoration-none fw-normal mr-4 text-dark fw-bold" title="返回开发平台主页" data-bs-toggle="dropdown"><img class="w-auto mb-1" src="/images/xp/shield.png" /><span class="fw-bold mt-1">3.0产品开发管理平台</span></a>
+                            <ul id="ul_show_level" class="dropdown-menu p-0 rounded-3 shadow ms-4">
+                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="1" href="#">&nbsp;展开到第1级</a></li>
                                 <li class="p-0 m-0"><hr class="dropdown-divider"></li>
-                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="2" href="#">展开到第2级</a></li>
-                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="3" href="#">展开到第3级</a></li>
-                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="4" href="#">展开到第4级</a></li>
-                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="5" href="#">展开到第5级</a></li>
-                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="6" href="#">展开到第6级</a></li>
+                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="2" href="#">&nbsp;展开到第2级</a></li>
+                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="3" href="#">&nbsp;展开到第3级</a></li>
+                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="4" href="#">&nbsp;展开到第4级</a></li>
+                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="5" href="#">&nbsp;展开到第5级</a></li>
+                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="6" href="#">&nbsp;展开到第6级</a></li>
                                 <li class="p-0 m-0"><hr class="dropdown-divider"></li>
-                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="30" href="#">全部显示</a></li>
+                                <li class="p-0 m-0"><a class="dropdown-item p-0 fs-9 show-level" level="30" href="#">&nbsp;全部显示</a></li>
                             </ul>
                         </div>
+                    </div>
+                    <div class="col">
                     </div>
                 </div>
                 <div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;margin-bottom:2px;">
