--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -26,12 +26,12 @@ a {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
-  font-size: 14px;
+*,html {
+  /*font-size: 10pt !important;*/
 }
 @media (min-width: 768px) {
   html {
-    font-size: 16px;
+    font-size: 10pt;
   }
 }
 
@@ -218,6 +218,10 @@ th[htmlValue="issue"] {
 
 .nav-link.active {
     font-weight: bold !important;
+}
+
+.fs-9pt {
+    font-size:10pt !important;
 }
 
 
