--- a/wwwroot/lib/ckeditor5/sample/styles.css
+++ b/wwwroot/lib/ckeditor5/sample/styles.css
@@ -353,7 +353,7 @@ body, html {
 	margin: 0;
 
 	font-family: sans-serif, Arial, Verdana, "Trebuchet MS", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	font-size: 16px;
+	font-size: 10pt;
 	line-height: 1.5;
 }
 
